[gd_scene load_steps=5 format=2]

[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ButtonGioco5.gd" type="Script" id=2]
[ext_resource path="res://Logo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]

[node name="Gioco5" type="Button" parent="."]
margin_left = 462.0
margin_top = 254.0
margin_right = 666.0
margin_bottom = 304.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Avvia Gioco5"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gioco7" type="Button" parent="."]
margin_left = 462.0
margin_top = 363.0
margin_right = 666.0
margin_bottom = 413.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Avvia Gioco7"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gioco10" type="Button" parent="."]
margin_left = 447.0
margin_top = 472.0
margin_right = 667.0
margin_bottom = 522.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Avvia Gioco10"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 662, 166 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
[connection signal="pressed" from="Gioco5" to="Gioco5" method="_on_Gioco5_pressed"]
[connection signal="pressed" from="Gioco7" to="Gioco7" method="_on_Gioco5_pressed"]
[connection signal="pressed" from="Gioco10" to="Gioco10" method="_on_Gioco5_pressed"]
